src/app/mdf/select-mdf/select-mdf.component.css
.portlet.light .portlet-body {
    padding-top: 0px!important;
}

.text {
    padding-bottom: 10px;
    border-bottom: 1px solid #ddd;
}

h4 {
    font-weight: 500!important;
    font-size: 15px!important;
}

h5 {
    font-size: 14px!important;
    font-weight: 400!important;
}

.img1 {
    background: #ebf1ff;
    text-align: center;
}

.img-responsive, .thumbnail a>img, .thumbnail>img {
    padding-top: 15px;
    display: block;
    max-width: 112px;
    height: auto;
    padding-bottom: 15px;
}

.para1 {
    padding: 10px 95px 20px 99px;
    font-size: 16px;
    text-align: justify;
}

.para2 {
    padding: 7px 91px 20px 99px;
    font-size: 16px;
    text-align: justify;
}

.hover-effect:hover {
    border: 1px solid #4eafd6;
    -webkit-transition: none !important;
    -moz-transition: none !important;
    -o-transition: none !important;
    transition: none !important;
}

.pointer {
    cursor: pointer;
}

.design-name {
    color: #008fd5;
    font-size: 12px;
    font-weight: 600;
    margin-left: 5px;
}

.mtop {
    margin-top: 20px !important;
}

.cpad {
    padding: 0px !important;
    min-height: 473px !important;

}

.mauto {
    margin: 0 auto;
}

.header-text-css {
    text-align: center;
    padding-left: 10px;
    padding-bottom: 11px;
    border-bottom: 1px solid #ddd;
}

.header-description-css {
    text-align: center;
    padding-left: 10px;
    color: #888;
    font-size: 12px;
    padding-top: 10px;
    /* height: 60px; */
}

.bordernone{
    border: none !important
}

.pltpx{
    padding-left: 10px;
}

.prfpx{
    padding-right: 40px;
}

.prtpx{
    padding-right: 32px;
}

.prtfpx{
    margin-left: 11px;
}

.prspx{
    padding-right: 60px;
}

.col-centered{
    float: none;
    margin: 0 auto;
}

.mltp{
    margin-left: 15% !important;
}
.mb20{
    margin-bottom: 20px !important;
}

